@@ -83,6 +83,8 @@ buildscript {
 
         markwonVersion = '4.6.2'
 
+        firebaseBomVersion = '32.7.1'
+
         walletConnectCoreVersion = "1.27.2"
         walletConnectWalletVersion = "1.20.2"
 
@@ -196,6 +198,12 @@ buildscript {
         walletConnectWalletDep = "com.walletconnect:web3wallet:$walletConnectWalletVersion"
 
         canonizationJsonDep = "io.github.erdtman:java-json-canonicalization:1.1"
+
+        firebaseBomDep = "com.google.firebase:firebase-bom:$firebaseBomVersion"
+        firestoreDep = "com.google.firebase:firebase-firestore"
+        firebaseCloudMessagingDep = "com.google.firebase:firebase-messaging"
+
+        kotlinReflect = "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
     }
 
     repositories {
@@ -256,6 +264,7 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
     main = "com.pinterest.ktlint.Main"
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
     args "-F", "$project.rootDir/**/src/main/**/*.kt"
     args "--android"
     jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
